--- a/.gitconfig
+++ b/.gitconfig
@@ -1,16 +1,11 @@
 [user]
 	name = Sakshi Aggarwal
 	email = 81718060+sakshiagrwal@users.noreply.github.com
-	signingkey = 6D8DEF354ED78DE805938A9D95A33FD984777F70
+	signingkey = 6EB51B3E1C6B549F
 [gpg]
 	program = C:\\Program Files (x86)\\GnuPG\\bin\\gpg.exe
 [commit]
 	gpgsign = true
-[pull]
-	rebase = false
 [core]
-	editor = nano
-[init]
-	defaultBranch = master
-[merge]
-	log = true
+	editor = notepad
+	autocrlf = false
