--- a/C/Users/Admin/.gitconfig
+++ b/C/Users/Admin/.gitconfig
@@ -42,17 +42,17 @@
 	# Add Alias
 	a = add --all # Shortcut to stage all changes
 	ai = add -i # Shortcut to interactively stage changes
-	
+
 	# Apply Alias
 	ap = apply # Shortcut to apply patches
 	as = apply --stat # Shortcut to show a diffstat after applying patches
 	ac = apply --check # Shortcut to check if patches apply cleanly
-	
+
 	# Abort Merge Alias
 	ama = am --abort # Shortcut to abort the current merge
 	amr = am --resolved # Shortcut to mark the current merge as resolved
 	ams = am --skip # Shortcut to skip the current merge
-	
+
 	# Branch Alias
 	b = branch # Shortcut to list branches
 	ba = branch -a # Shortcut to list all branches, including remote ones
@@ -62,7 +62,7 @@
 	bc = rev-parse --abbrev-ref HEAD # Shortcut to get the current branch name
 	bu = !git rev-parse --abbrev-ref --symbolic-full-name "@{u}" # Shortcut to get the name of the upstream branch
 	bs = !git-branch-status # Shortcut to show the status of all branches
-	
+
 	# Commit Alias
 	c = commit # Shortcut to create a new commit
 	ca = commit -a # Shortcut to create a new commit, automatically staging changes
@@ -72,14 +72,14 @@
 	cd = commit --amend # Shortcut to amend the latest commit
 	cad = commit -a --amend # Shortcut to amend the latest commit, automatically staging changes
 	ced = commit --allow-empty --amend # Shortcut to amend the latest, empty commit
-	
+
 	# Clone Alias
 	cl = clone # Shortcut to clone a repository
 	cld = clone --depth 1 # Shortcut to clone only the latest revision of a repository
 	clg = !sh -c 'git clone git://github.com/$1 $(basename $1)' - # Shortcut to clone a repository from GitHub
 	clgp = !sh -c 'git clone git@github.com:$1 $(basename $1)' - # Shortcut to clone a private repository from GitHub
 	clgu = !sh -c 'git clone git@github.com:$(git config --get user.username)/$1 $1' - # Shortcut to clone your own repository from GitHub
-	
+
 	# Cherry-pick Alias
 	cp = cherry-pick # Shortcut to apply a change from one branch to another
 	cpa = cherry-pick --abort # Shortcut to abort the current cherry-pick operation
@@ -93,25 +93,25 @@
 	dck = diff --cached --check # Show differences between the index and a named commit and exit with non-zero status if there are differences
 	dt = difftool # Show differences using a specific diff tool
 	dct = difftool --cached # Show differences between the index and a named commit using a specific diff tool
-	
+
 	# Fetch Alias
 	f = fetch # Download objects and refs from another repository
 	fo = fetch origin # Download objects and refs from the origin repository
 	fu = fetch upstream # Download objects and refs from the upstream repository
-	
+
 	# Format Alias
 	fp = format-patch # Format patches based on Git commits
-	
+
 	# Fsck Alias
 	fk = fsck # Verify connectivity and validity of objects in the Git database
-	
+
 	# Grep Alias
 	g = grep -p # Show the matching lines from files in the Git repository, using the -p option
-	
+
 	# Log Alias
 	l = log --oneline # Show the commit logs in a one line format
 	lg = log --oneline --graph --decorate # Show the commit logs in a one line format, with graph and decoration
-	
+
 	# LS-Files Alias
 	ls = ls-files # Show information about files in the index and the working tree
 	lsf = !git ls-files | grep -i # Show information about files in the index and the working tree and filter the results with grep -i
@@ -153,11 +153,11 @@
 	psfoc = !git push -f origin $(git bc) # Push force to origin current branch
 	psuoc = !git push -u origin $(git bc) # Push with set upstream to origin current branch
 	psdc = !git push origin :$(git bc) # Push delete to origin current branch
-	
+
 	# Pull Alias
 	pl = pull # Pull all branches
 	pb = pull --rebase # Pull with rebase
-	
+
 	# Pull Alias for origin/master
 	plo = pull origin # Pull from origin
 	pbo = pull --rebase origin # Pull with rebase from origin
@@ -165,21 +165,21 @@
 	ploc = !git pull origin $(git bc) # Pull from origin current branch
 	pbom = pull --rebase origin master # Pull with rebase from origin master branch
 	pboc = !git pull --rebase origin $(git bc) # Pull with rebase from origin current branch
-	
+
 	# Pull Alias
 	plu = pull upstream # Pull from upstream
 	plum = pull upstream master # Pull from upstream master branch
 	pluc = !git pull upstream $(git bc) # Pull from upstream current branch
 	pbum = pull --rebase upstream master # Pull with rebase from upstream master branch
 	pbuc = !git pull --rebase upstream $(git bc) # Pull with rebase from upstream current branch
-	
+
 	# Rebase Alias
 	rb = rebase # Rebase current branch
 	rba = rebase --abort # Abort rebase
 	rbc = rebase --continue # Continue rebase
 	rbi = rebase --interactive # Interactive rebase
 	rbs = rebase --skip # Skip rebase
-	
+
 	# Reset Alias
 	re = reset # Reset current branch
 	rh = reset HEAD # Reset the current branch's HEAD to its default state
@@ -207,15 +207,15 @@
 	rsu = remote show upstream # Show information about the upstream remote repository
 	rpo = remote prune origin # Remove remote branches that are no longer in the origin remote repository
 	rpu = remote prune upstream # Remove remote branches that are no longer in the upstream remote repository
-	
+
 	# Remove Alias
 	rmf = rm -f # Removing a file in force mode
 	rmrf = rm -r -f # Removing a directory and its contents in force mode
-	
+
 	# Status Alias
 	s = status # Displaying the status of the git repository
 	sb = status -s -b # Displaying a compact version of the repository's status, including branch information
-	
+
 	# Stash Alias
 	sa = stash apply # Applying the latest stash on the current branch
 	sc = stash clear # Clearing the stash
@@ -226,34 +226,34 @@
 	ssk = stash save -k # Saving changes to a stash, including the changes in the index
 	sw = stash show # Displaying the changes of a stash
 	st = !git stash list | wc -l 2>/dev/null | grep -oEi '[0-9][0-9]*' # Displaying the number of stashes in the stash list
-	
+
 	# Tag Alias
 	t = tag # Create a new tag in the git repository
 	td = tag -d # Deleting a tag in the git repository
-	
+
 	# Show Alias
 	w = show # Displaying the details of the repository object (e.g. commit, file, etc.)
 	wp = show -p # Displaying the patch (diff) representation of the repository object
 	wr = show -p --no-color # Displaying the patch (diff) representation of the repository object without color codes
-	
-	#
+
+	# SVN Alias
 	svnr = svn rebase # Rebasing changes from the svn repository
 	svnd = svn dcommit # Committing changes to the svn repository
 	svnl = svn log --oneline --show-commit # Displaying the svn log in a condensed one-line format
-	
+
 	# Submodule Alias
 	subadd = !sh -c 'git submodule add git://github.com/$1 $2/$(basename $1)' - # Adding a new submodule to the git repository
 	subrm = !sh -c 'git submodule deinit -f -- $1 && rm -rf .git/modules/$1 && git rm -f $1' - # Removing a submodule from the git repository
 	subup = submodule update --init --recursive # Updating the submodules in the git repository
 	subpull = !git submodule foreach git pull --tags -f origin master # Pulling the latest changes for all submodules from the remote repository
-	
+
 	# Update Index Alias
 	assume = update-index --assume-unchanged # Set the specified files as unchanged in the index
 	unassume = update-index --no-assume-unchanged # Revert the assumption of unchanged on the specified files in the index
 	assumed = !git ls -v | grep ^h | cut -c 3- # Show all assumed unchanged files in the index
 	unassumeall = !git assumed | xargs git unassume # Revert the assumption of unchanged on all files in the index
 	assumeall = !git status -s | awk {'print $2'} | xargs git assume # Set all files in the index as assumed unchanged
-	
+
 	# Version Control Alias
 	bump = !sh -c 'git commit -am \"Version bump v$1\" && git psuoc && git release $1' - # Commit current changes, create a tag for the new version, and push the changes to remote
 	release = !sh -c 'git tag v$1 && git pst' - # Create a new tag for a specific version
@@ -264,7 +264,7 @@
 	bare = !sh -c 'git symbolic-ref HEAD refs/heads/$1 && git rm --cached -r . && git clean -xfd' - # Convert a repository to a bare repository
 	whois = !sh -c 'git log -i -1 --author=\"$1\" --pretty=\"format:%an <%ae>\"' - # Show the author email of the last commit by a specific author
 	serve = daemon --reuseaddr --verbose --base-path=. --export-all ./.git # Start a Git server for the current repository
-	
+
 	# Sync & Comparison Alias
 	behind = !git rev-list --left-only --count $(git bu)...HEAD # Get the number of commits behind the upstream branch
 	ahead = !git rev-list --right-only --count $(git bu)...HEAD # Get the number of commits ahead of the upstream branch
