windows: config: Update `git` and `ohmyposh` Why 'JetBrainsMono NFM' Font?: To see the icons displayed in Oh My Posh. Oh My Posh was designed to use Nerd Fonts https://github.com/ryanoasis/nerd-fonts/releases.
Signed-off-by: Sakshi Aggarwal <81718060+sakshiagrwal@users.noreply.github.com>

--- a/Windows/C/Users/Admin/AppData/Roaming/Code/User/settings.json
+++ b/Windows/C/Users/Admin/AppData/Roaming/Code/User/settings.json
@@ -1,6 +1,6 @@
 {
     "workbench.colorTheme": "Catppuccin Mocha",
-    "editor.fontFamily": "'Maple Mono', 'monospace', monospace",
+    "editor.fontFamily": "'JetBrainsMono NFM', 'JetBrains Mono', 'Maple Mono'",
     "editor.fontSize": 12,
     "terminal.integrated.fontSize": 12,
     "debug.console.fontSize": 12,
