--- a/Windows/C/Users/Admin/AppData/Roaming/Code/User/settings.json
+++ b/Windows/C/Users/Admin/AppData/Roaming/Code/User/settings.json
@@ -1,44 +1,61 @@
 {
-    "workbench.colorTheme": "Catppuccin Mocha",
-    "editor.fontFamily": "'JetBrainsMono NFM', 'JetBrains Mono', 'Maple Mono'",
-    "editor.fontSize": 12,
-    "terminal.integrated.fontSize": 12,
-    "debug.console.fontSize": 12,
-    "scm.inputFontSize": 12,
-    "markdown.preview.fontSize": 12,
-    "chat.editor.fontSize": 12,
-    "workbench.startupEditor": "none",
-    "workbench.iconTheme": "material-icon-theme",
-    "markdown-preview-enhanced.previewTheme": "atom-dark.css",
-    "redhat.telemetry.enabled": false,
-    "files.trimTrailingWhitespace": true,
-    "editor.semanticHighlighting.enabled": true,
-    "terminal.integrated.minimumContrastRatio": 1,
-    "explorer.confirmDelete": false,
-    "editor.formatOnSave": true,
-    "editor.scrollbar.vertical": "hidden",
-    "editor.scrollbar.verticalScrollbarSize": 0,
-    "security.workspace.trust.untrustedFiles": "newWindow",
-    "security.workspace.trust.startupPrompt": "never",
-    "security.workspace.trust.enabled": false,
-    "editor.minimap.side": "left",
-    "extensions.autoUpdate": false,
-    "terminal.explorerKind": "both",
-    "telemetry.telemetryLevel": "off",
-    "terminal.sourceControlRepositoriesKind": "both",
-    "[html]": {
-        "editor.defaultFormatter": "vscode.html-language-features"
-    },
-    "[css]": {
-        "editor.defaultFormatter": "vscode.css-language-features"
-    },
-    "[json]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    "[jsonc]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
+  "catppuccin.accentColor": "pink",
+  "catppuccin.colorOverrides": {
+    "mocha": {
+      "base": "#000000",
+      "crust": "#020202",
+      "mantle": "#010101"
     }
+  },
+  "catppuccin.customUIColors": {
+    "mocha": {
+      "statusBar.foreground": "accent"
+    }
+  },
+  "[css]": {
+    "editor.defaultFormatter": "vscode.css-language-features"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "chat.editor.fontSize": 12,
+  "debug.console.fontSize": 12,
+  "editor.fontFamily": "'JetBrainsMono NFM', 'JetBrains Mono', 'Maple Mono'",
+  "editor.fontSize": 12,
+  "editor.minimap.side": "left",
+  "editor.semanticHighlighting.enabled": true,
+  "editor.scrollbar.vertical": "hidden",
+  "editor.scrollbar.verticalScrollbarSize": 0,
+  "editor.formatOnSave": true,
+  "explorer.confirmDelete": false,
+  "extensions.autoUpdate": false,
+  "files.trimTrailingWhitespace": true,
+  "markdown-preview-enhanced.codeBlockTheme": "atom-dark.css",
+  "markdown-preview-enhanced.previewTheme": "atom-dark.css",
+  "markdown.preview.fontSize": 12,
+  "redhat.telemetry.enabled": false,
+  "scm.inputFontSize": 12,
+  "security.workspace.trust.enabled": false,
+  "security.workspace.trust.startupPrompt": "never",
+  "security.workspace.trust.untrustedFiles": "newWindow",
+  "telemetry.telemetryLevel": "off",
+  "terminal.explorerKind": "both",
+  "terminal.integrated.fontSize": 12,
+  "terminal.integrated.minimumContrastRatio": 1,
+  "terminal.sourceControlRepositoriesKind": "both",
+  "workbench.colorTheme": "Catppuccin Mocha",
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.startupEditor": "none"
 }
