--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,15 @@ jobs:
 
             - name: Run PowerShell script
               shell: pwsh
-              run: .github/scripts/script.ps1
+              run: |
+                  Invoke-ScriptAnalyzer -Path .github/scripts/script.ps1 -Recurse -Outvariable issues
+                    $errors   = $issues.Where({$_.Severity -eq 'Error'})
+                  $warnings = $issues.Where({$_.Severity -eq 'Warning'})
+                  if ($errors) {
+                      Write-Error "There were $($errors.Count) errors and $($warnings.Count) warnings total." -ErrorAction Stop
+                  } else {
+                      Write-Output "There were $($errors.Count) errors and $($warnings.Count) warnings total."
+                  }
 
             - name: Commit changes
               run: |
