--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -1,82 +1,41 @@
-// IMPORTANT: Start your code on the 2nd line
-// Disable Shield Studies
-lockPref("app.shield.optoutstudies.enabled", false)
 
-// Disable health report uploads
-lockPref("datareporting.healthreport.uploadEnabled", false)
-
-// Disable Top Stories in New Tab Page
-lockPref("browser.newtabpage.activity-stream.feeds.section.topstories", false)
-
-// Disable Top Sites in New Tab Page
-// lockPref("browser.newtabpage.activity-stream.feeds.topsites", false)
-
-// Enable HTTPS-only mode
-lockPref("dom.security.https_only_mode", true)
-
-// Set UI density to 1 (normal)
-lockPref("browser.uidensity", 1)
-
-// Set full-screen API transition duration to 0 seconds
-lockPref("full-screen-api.transition-duration.enter", "0 0")
-lockPref("full-screen-api.transition-duration.leave", "0 0")
-
-// Disable full-screen warning timeout
-lockPref("full-screen-api.warning.timeout", 0)
-
-// Disable drag images
-lockPref("nglayout.enable_drag_images", false)
-
-// Disable automatic parsing of the reader view
-lockPref("reader.parse-on-load.enabled", false)
-
-// Disable Firefox View in tabs
-lockPref("browser.tabs.firefox-view", false)
-
-// Disable Tab Manager
-lockPref("browser.tabs.tabmanager.enabled", false)
-
-// Disable Activity Stream recommendations for addons and features
-lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false)
-lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false)
-
-// Disable health report service and data submission
-lockPref("datareporting.healthreport.service.enabled", false)
-lockPref("datareporting.policy.dataSubmissionEnabled", false)
-
-// Disable all telemetry features
-lockPref("toolkit.telemetry.enabled", false)
-lockPref("toolkit.telemetry.unified", false)
-lockPref("toolkit.telemetry.archive.enabled", false)
-lockPref("toolkit.telemetry.newProfilePing.enabled", false)
-lockPref("toolkit.telemetry.shutdownPingSender.enabled", false)
-lockPref("toolkit.telemetry.updatePing.enabled", false)
-lockPref("toolkit.telemetry.bhrPing.enabled", false)
-lockPref("toolkit.telemetry.firstShutdownPing.enabled", false)
-lockPref("browser.ping-centre.telemetry", false)
-
-// Disable Pocket integration
-lockPref("extensions.pocket.enabled", false)
-
-// Disable telemetry for Activity Stream feeds
-lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false)
-lockPref("browser.newtabpage.activity-stream.telemetry", false)
-lockPref("browser.newtabpage.activity-stream.feeds.snippets", false)
-lockPref("browser.newtabpage.activity-stream.feeds.section.topstories", false)
-lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false)
-
-// Disable network predictor, prefetching, and speculative parallel limit
-lockPref("network.predictor.enabled", false)
-lockPref("network.prefetch-next", false)
-lockPref("network.http.speculative-parallel-limit", 0)
-
-// Disable search suggestions in the address bar
-lockPref("browser.search.suggest.enabled", false)
-lockPref("browser.urlbar.suggest.searches", false)
-
-// Disable addons cache and recommendations on about:addons
-lockPref("extensions.getAddons.cache.enabled", false)
-lockPref("extensions.htmlaboutaddons.recommendations.enabled", false)
-
-// Disable Push notifications
-lockPref("dom.push.enabled", false)
+lockPref("app.shield.optoutstudies.enabled", false);
+lockPref("datareporting.healthreport.uploadEnabled", false);
+lockPref("browser.newtabpage.activity-stream.feeds.section.topstories", false);
+defaultPref("browser.newtabpage.activity-stream.feeds.topsites", true);
+lockPref("dom.security.https_only_mode", true);
+lockPref("browser.uidensity", 1);
+lockPref("full-screen-api.transition-duration.enter", "0 0");
+lockPref("full-screen-api.transition-duration.leave", "0 0");
+lockPref("full-screen-api.warning.timeout", 0);
+lockPref("nglayout.enable_drag_images", false);
+lockPref("reader.parse-on-load.enabled", false);
+lockPref("browser.tabs.firefox-view", false);
+lockPref("browser.tabs.tabmanager.enabled", false);
+lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
+lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
+lockPref("datareporting.healthreport.service.enabled", false);
+lockPref("datareporting.policy.dataSubmissionEnabled", false);
+lockPref("toolkit.telemetry.enabled", false);
+lockPref("toolkit.telemetry.unified", false);
+lockPref("toolkit.telemetry.archive.enabled", false);
+lockPref("toolkit.telemetry.newProfilePing.enabled", false);
+lockPref("toolkit.telemetry.shutdownPingSender.enabled", false);
+lockPref("toolkit.telemetry.updatePing.enabled", false);
+lockPref("toolkit.telemetry.bhrPing.enabled", false);
+lockPref("toolkit.telemetry.firstShutdownPing.enabled", false);
+lockPref("browser.ping-centre.telemetry", false);
+lockPref("extensions.pocket.enabled", false);
+lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
+lockPref("browser.newtabpage.activity-stream.telemetry", false);
+lockPref("browser.newtabpage.activity-stream.feeds.snippets", false);
+lockPref("browser.newtabpage.activity-stream.feeds.section.topstories", false);
+lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
+lockPref("network.predictor.enabled", false);
+lockPref("network.prefetch-next", false);
+lockPref("network.http.speculative-parallel-limit", 0);
+lockPref("browser.search.suggest.enabled", false);
+lockPref("browser.urlbar.suggest.searches", false);
+lockPref("extensions.getAddons.cache.enabled", false);
+lockPref("extensions.htmlaboutaddons.recommendations.enabled", false);
+lockPref("dom.push.enabled", false);
