firefox: remove `titlebar` and enabled `passwords` import [1] https://askubuntu.com/questions/1445525/is-there-a-way-to-remove-the-title-bar-on-firefox-ubuntu [2] https://support.mozilla.org/en-US/questions/1317228
Signed-off-by: Sakshi Agrawal <81718060+sakshiagrwal@users.noreply.github.com>
Signed-off-by: Sakshi Aggarwal <81718060+sakshiagrwal@users.noreply.github.com>

--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -2,8 +2,9 @@
 lockPref("app.shield.optoutstudies.enabled", false);
 lockPref("datareporting.healthreport.uploadEnabled", false);
 lockPref("browser.newtabpage.activity-stream.feeds.section.topstories", false);
-defaultPref("browser.newtabpage.activity-stream.feeds.topsites", true);
+lockPref("browser.newtabpage.activity-stream.feeds.topsites", true);
 lockPref("dom.security.https_only_mode", true);
+lockPref("browser.tabs.drawInTitlebar", true);
 lockPref("browser.uidensity", 1);
 lockPref("full-screen-api.transition-duration.enter", "0 0");
 lockPref("full-screen-api.transition-duration.leave", "0 0");
@@ -14,6 +15,7 @@ lockPref("browser.tabs.firefox-view", false);
 lockPref("browser.tabs.tabmanager.enabled", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
+lockPref("signon.management.page.fileImport.enabled", true);
 lockPref("datareporting.healthreport.service.enabled", false);
 lockPref("datareporting.policy.dataSubmissionEnabled", false);
 lockPref("toolkit.telemetry.enabled", false);
