firefox: remove sponsored shortcuts
Signed-off-by: Sakshi Aggarwal <81718060+sakshiagrwal@users.noreply.github.com>

--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -1,8 +1,8 @@
 
 lockPref("app.shield.optoutstudies.enabled", false);
 lockPref("datareporting.healthreport.uploadEnabled", false);
-lockPref("browser.newtabpage.activity-stream.feeds.section.topstories", false);
 lockPref("browser.newtabpage.activity-stream.feeds.topsites", true);
+lockPref("browser.newtabpage.activity-stream.showSponsoredTopSites", false);
 lockPref("dom.security.https_only_mode", true);
 lockPref("browser.tabs.drawInTitlebar", true);
 lockPref("browser.uidensity", 1);
