firefox: pinned top sites
lockPref("services.sync.prefs.sync.browser.newtabpage.pinned", true);

--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -16,6 +16,7 @@ lockPref("browser.tabs.tabmanager.enabled", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
 lockPref("signon.management.page.fileImport.enabled", true);
+lockPref("browser.newtabpage.pinned", '[{"url":"https://music.youtube.com/","label":"YT Music"},{"url":"https://www.youtube.com/","label":"YouTube"}, {"url":"https://chat.openai.com/","label":"Chat GPT"}, {"url":"https://bard.google.com/","label":"Bard"}]');
 lockPref("datareporting.healthreport.service.enabled", false);
 lockPref("datareporting.policy.dataSubmissionEnabled", false);
 lockPref("toolkit.telemetry.enabled", false);
