firefox: comnts temp
Signed-off-by: Sakshi Aggarwal <81718060+sakshiagrwal@users.noreply.github.com>

--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -1,4 +1,5 @@
 
+/* --- Privacy and Security --- */
 lockPref("app.shield.optoutstudies.enabled", false);
 lockPref("dom.security.https_only_mode", true);
 lockPref("datareporting.healthreport.service.enabled", false);
@@ -13,6 +14,8 @@ lockPref("browser.ping-centre.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("dom.push.enabled", false);
+
+/* --- User Interface --- */
 lockPref("browser.tabs.drawInTitlebar", true);
 lockPref("browser.uidensity", 1);
 lockPref("full-screen-api.transition-duration.enter", "0 0");
@@ -23,6 +26,8 @@ lockPref("reader.parse-on-load.enabled", false);
 lockPref("browser.tabs.firefox-view", false);
 lockPref("browser.tabs.tabmanager.enabled", false);
 lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
+
+/* --- Features and Add-ons --- */
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
 lockPref("signon.management.page.fileImport.enabled", true);
