--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -1,9 +1,19 @@
 
 lockPref("app.shield.optoutstudies.enabled", false);
-lockPref("datareporting.healthreport.uploadEnabled", false);
-lockPref("browser.newtabpage.activity-stream.feeds.section.topstories", false);
-defaultPref("browser.newtabpage.activity-stream.feeds.topsites", true);
 lockPref("dom.security.https_only_mode", true);
+lockPref("datareporting.healthreport.service.enabled", false);
+lockPref("toolkit.telemetry.enabled", false);
+lockPref("toolkit.telemetry.unified", false);
+lockPref("toolkit.telemetry.newProfilePing.enabled", false);
+lockPref("toolkit.telemetry.shutdownPingSender.enabled", false);
+lockPref("toolkit.telemetry.updatePing.enabled", false);
+lockPref("toolkit.telemetry.bhrPing.enabled", false);
+lockPref("toolkit.telemetry.firstShutdownPing.enabled", false);
+lockPref("browser.ping-centre.telemetry", false);
+lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
+lockPref("browser.newtabpage.activity-stream.telemetry", false);
+lockPref("dom.push.enabled", false);
+lockPref("browser.tabs.drawInTitlebar", true);
 lockPref("browser.uidensity", 1);
 lockPref("full-screen-api.transition-duration.enter", "0 0");
 lockPref("full-screen-api.transition-duration.leave", "0 0");
@@ -12,30 +22,12 @@ lockPref("nglayout.enable_drag_images", false);
 lockPref("reader.parse-on-load.enabled", false);
 lockPref("browser.tabs.firefox-view", false);
 lockPref("browser.tabs.tabmanager.enabled", false);
+lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
-lockPref("datareporting.healthreport.service.enabled", false);
-lockPref("datareporting.policy.dataSubmissionEnabled", false);
-lockPref("toolkit.telemetry.enabled", false);
-lockPref("toolkit.telemetry.unified", false);
-lockPref("toolkit.telemetry.archive.enabled", false);
-lockPref("toolkit.telemetry.newProfilePing.enabled", false);
-lockPref("toolkit.telemetry.shutdownPingSender.enabled", false);
-lockPref("toolkit.telemetry.updatePing.enabled", false);
-lockPref("toolkit.telemetry.bhrPing.enabled", false);
-lockPref("toolkit.telemetry.firstShutdownPing.enabled", false);
-lockPref("browser.ping-centre.telemetry", false);
-lockPref("extensions.pocket.enabled", false);
-lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
-lockPref("browser.newtabpage.activity-stream.telemetry", false);
-lockPref("browser.newtabpage.activity-stream.feeds.snippets", false);
-lockPref("browser.newtabpage.activity-stream.feeds.section.topstories", false);
-lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
+lockPref("signon.management.page.fileImport.enabled", true);
 lockPref("network.predictor.enabled", false);
 lockPref("network.prefetch-next", false);
 lockPref("network.http.speculative-parallel-limit", 0);
-lockPref("browser.search.suggest.enabled", false);
-lockPref("browser.urlbar.suggest.searches", false);
 lockPref("extensions.getAddons.cache.enabled", false);
 lockPref("extensions.htmlaboutaddons.recommendations.enabled", false);
-lockPref("dom.push.enabled", false);
