--- a/Linux/etc/systemd/system/battery-charge-threshold.service
+++ b/Linux/etc/systemd/system/battery-charge-threshold.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=Persist the battery charging threshold after 80%
+Description=Set battery charging threshold to 80%
 After=multi-user.target
 StartLimitBurst=0
 
 [Service]
 Type=oneshot
-Restart=on-failure
+Restart=no
 ExecStart=/bin/bash -c 'echo 80 > /sys/class/power_supply/BAT0/charge_control_end_threshold'
 
 [Install]
