--- a/Linux/etc/systemd/system/battery-threshold.service
+++ b/Linux/etc/systemd/system/battery-threshold.service
@@ -6,6 +6,7 @@ StartLimitBurst=0
 [Service]
 Type=oneshot
 Restart=no
+RemainAfterExit=true
 ExecStart=/bin/bash -c "echo 80 > /sys/class/power_supply/BAT0/charge_control_end_threshold"
 
 [Install]
