--- a/Linux/etc/systemd/system/battery-threshold.service
+++ b/Linux/etc/systemd/system/battery-threshold.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Set battery charging threshold to 80%
+Description=Set Battery Charging Threshold to 80%
 After=multi-user.target
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash -c 'echo 80 > /sys/class/power_supply/BAT0/charge_control_end_threshold'
+ExecStart=/bin/bash -c "echo 80 > /sys/class/power_supply/BAT0/charge_control_end_threshold"
 
 [Install]
 WantedBy=multi-user.target
