--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -13,8 +13,9 @@ lockPref("browser.ping-centre.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("dom.push.enabled", false);
+lockPref("dom.webnotification.enabled", false);
 lockPref("browser.tabs.drawInTitlebar", true);
-lockPref("browser.uidensity", 1);
+///lockPref("browser.uidensity", 1);
 lockPref("full-screen-api.transition-duration.enter", "0 0");
 lockPref("full-screen-api.transition-duration.leave", "0 0");
 lockPref("full-screen-api.warning.timeout", 0);
@@ -30,5 +31,6 @@ lockPref("signon.management.page.fileImport.enabled", true);
 lockPref("network.predictor.enabled", false);
 lockPref("network.prefetch-next", false);
 lockPref("network.http.speculative-parallel-limit", 0);
+lockPref("network.strict_transport_security.preloaded_lists", 3);
 lockPref("extensions.getAddons.cache.enabled", false);
 lockPref("extensions.htmlaboutaddons.recommendations.enabled", false);
