--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -15,7 +15,6 @@ lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("dom.push.enabled", false);
 lockPref("dom.webnotification.enabled", false);
 lockPref("browser.tabs.drawInTitlebar", true);
-///lockPref("browser.uidensity", 1);
 lockPref("full-screen-api.transition-duration.enter", "0 0");
 lockPref("full-screen-api.transition-duration.leave", "0 0");
 lockPref("full-screen-api.warning.timeout", 0);
@@ -24,7 +23,7 @@ lockPref("reader.parse-on-load.enabled", false);
 lockPref("browser.tabs.firefox-view", false);
 lockPref("browser.tabs.tabmanager.enabled", false);
 lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
-lockPref("toolkit.legacyUserProfileCustomizations.stylesheets", true);
+lockPref("toolkit.legacyUserProfileCustomizations.stylesheets", true); Enables user-created CSS stylesheets.
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
 lockPref("signon.management.page.fileImport.enabled", true);
