--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -23,7 +23,7 @@ lockPref("reader.parse-on-load.enabled", false);
 lockPref("browser.tabs.firefox-view", false);
 lockPref("browser.tabs.tabmanager.enabled", false);
 lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
-lockPref("toolkit.legacyUserProfileCustomizations.stylesheets", true); Enables user-created CSS stylesheets.
+lockPref("toolkit.legacyUserProfileCustomizations.stylesheets", true);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
 lockPref("signon.management.page.fileImport.enabled", true);
