--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -13,8 +13,8 @@ lockPref("browser.ping-centre.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("dom.push.enabled", false);
+lockPref("dom.webnotification.enabled", false);
 lockPref("browser.tabs.drawInTitlebar", true);
-lockPref("browser.uidensity", 1);
 lockPref("full-screen-api.transition-duration.enter", "0 0");
 lockPref("full-screen-api.transition-duration.leave", "0 0");
 lockPref("full-screen-api.warning.timeout", 0);
@@ -23,11 +23,13 @@ lockPref("reader.parse-on-load.enabled", false);
 lockPref("browser.tabs.firefox-view", false);
 lockPref("browser.tabs.tabmanager.enabled", false);
 lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
+lockPref("toolkit.legacyUserProfileCustomizations.stylesheets", true);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
 lockPref("signon.management.page.fileImport.enabled", true);
 lockPref("network.predictor.enabled", false);
 lockPref("network.prefetch-next", false);
 lockPref("network.http.speculative-parallel-limit", 0);
+lockPref("network.strict_transport_security.preloaded_lists", 3);
 lockPref("extensions.getAddons.cache.enabled", false);
 lockPref("extensions.htmlaboutaddons.recommendations.enabled", false);
