--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -15,7 +15,7 @@ lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("dom.push.enabled", false);
 lockPref("dom.webnotification.enabled", false);
 lockPref("browser.tabs.drawInTitlebar", true);
-lockPref("layout.css.devPixelsPerPx", "1.08");
+lockPref("layout.css.devPixelsPerPx", 1.08);
 lockPref("full-screen-api.transition-duration.enter", "0 0");
 lockPref("full-screen-api.transition-duration.leave", "0 0");
 lockPref("full-screen-api.warning.timeout", 0);
