--- a/Linux/usr/lib/firefox/firefox.cfg
+++ b/Linux/usr/lib/firefox/firefox.cfg
@@ -15,7 +15,7 @@ lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("dom.push.enabled", false);
 lockPref("dom.webnotification.enabled", false);
 lockPref("browser.tabs.drawInTitlebar", true);
-lockPref("layout.css.devPixelsPerPx", 1.08);
+//lockPref("layout.css.devPixelsPerPx", 1.08);
 lockPref("full-screen-api.warning.timeout", 0);
 lockPref("nglayout.enable_drag_images", false);
 lockPref("reader.parse-on-load.enabled", false);
