Revert "Run every 24 hours"
This reverts commit 0db58ba44a4756e4bbabec676af3e53c0e6c51f6.

Signed-off-by: Sakshi Aggarwal <81718060+sakshiagrwal@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Update JSON
 
 on:
     schedule:
-        - cron: "0 */24 * * *"
+        - cron: "0 0 * * Sun"
     workflow_dispatch:
     push:
         paths:
