--- a/Windows/Software/install_apps.json
+++ b/Windows/Software/install_apps.json
@@ -59,33 +59,28 @@
     "version": "1.87.0",
     "url": "https://update.code.visualstudio.com/latest/win32-x64/stable",
     "extensions": [
-      "aaron-bond.better-comments",
-      "astro-build.astro-vscode",
-      "BeardedBear.beardedtheme",
-      "Blackboxapp.blackbox",
-      "Codeium.codeium",
+      "beardedbear.beardedtheme",
       "dbaeumer.vscode-eslint",
       "eamodio.gitlens",
       "esbenp.prettier-vscode",
-      "github.vscode-github-actions",
-      "hnw.vscode-auto-open-markdown-preview",
       "jock.svg",
+      "ms-dotnettools.csharp",
+      "ms-dotnettools.vscode-dotnet-runtime",
       "ms-python.black-formatter",
+      "ms-python.debugpy",
       "ms-python.pylint",
       "ms-python.python",
       "ms-python.vscode-pylance",
       "ms-vscode.makefile-tools",
       "ms-vscode.powershell",
-      "PKief.material-icon-theme",
+      "pkief.material-icon-theme",
       "redhat.java",
       "redhat.vscode-xml",
       "redhat.vscode-yaml",
-      "ritwickdey.LiveServer",
-      "streetsidesoftware.code-spell-checker",
-      "TabNine.tabnine-vscode",
-      "usernamehw.errorlens",
-      "VisualStudioExptTeam.intellicode-api-usage-examples",
-      "VisualStudioExptTeam.vscodeintellicode",
+      "ritwickdey.liveserver",
+      "tabnine.tabnine-vscode",
+      "visualstudioexptteam.intellicode-api-usage-examples",
+      "visualstudioexptteam.vscodeintellicode",
       "vscjava.vscode-java-debug",
       "vscjava.vscode-java-dependency",
       "vscjava.vscode-java-pack",
