--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -12,6 +12,7 @@ lockPref("toolkit.telemetry.firstShutdownPing.enabled", false);
 lockPref("browser.ping-centre.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.telemetry", false);
+lockPref("browser.newtabpage.activity-stream.topSitesRows", 1);
 lockPref("dom.push.enabled", false);
 lockPref("dom.webnotification.enabled", false);
 lockPref("browser.tabs.drawInTitlebar", true);
