--- a/Windows/Software/install_apps.json
+++ b/Windows/Software/install_apps.json
@@ -146,6 +146,6 @@
   {
     "appName": "YoutubeDownloader",
     "version": "1.12.2",
-    "url": null
+    "url": "https://github.com/Tyrrrz/YoutubeDownloader/releases/download/1.12.2/YoutubeDownloader.win-x64.zip"
   }
 ]
