install_apps.json: sync code extensions
https://code.visualstudio.com/docs/editor/extension-marketplace#_command-line-extension-management

--- a/Windows/Software/install_apps.json
+++ b/Windows/Software/install_apps.json
@@ -63,9 +63,10 @@
       "dbaeumer.vscode-eslint",
       "eamodio.gitlens",
       "esbenp.prettier-vscode",
+      "foxundermoon.shell-format",
+      "github.codespaces",
+      "github.github-vscode-theme",
       "jock.svg",
-      "ms-dotnettools.csharp",
-      "ms-dotnettools.vscode-dotnet-runtime",
       "ms-python.black-formatter",
       "ms-python.debugpy",
       "ms-python.pylint",
