--- a/Windows/C/Users/Admin/AppData/Roaming/Code/User/settings.json
+++ b/Windows/C/Users/Admin/AppData/Roaming/Code/User/settings.json
@@ -17,6 +17,9 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
+    "[yaml]": {
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
     "editor.semanticHighlighting.enabled": true,
     "editor.scrollbar.vertical": "hidden",
     "editor.scrollbar.verticalScrollbarSize": 0,
